update documentation and name

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
         </p>
 
         <p>
-          Each bar of each graph is showing the ratio of: comments on other contributors' pull requests (green) to
+          Each bar of each graph is showing the ratio of: comments - on other contributors' pull requests - (green) to
           authored pull requests (gray). The goal we should aim for is a completely green bar, meaning that we have
           commented on other peoples' pull requests at least as many times as we have asked for people to comment on our
-          own pull requests.
+          own pull requests. Or, "Are we providing as much feedback as we are asking for?"
         </p>
 
         <article id="ratios"></article>
@@ -181,8 +181,8 @@
         <summary><h2>Data</h2></summary>
 
         <p>
-          To update the "server" "cache" copy the encrypted data to the system clipboard and update the data.json file
-          in the repo.
+          To update the "server cached" data, copy (using the button below) the encrypted data to the system clipboard
+          and update the data.json file in the repo.
         </p>
 
         <button
