--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
 
+    <link rel="icon" href="./favicon.ico" sizes="any" />
+
     <script
       deferred
       crossorigin="anonymous"
@@ -234,7 +236,6 @@
         createOpenTimesPlot(data);
         inDOM("#openTimes").style.visibility = "visible";
 
-        // dataCopy.sub(cacheManager.events.UPDATED, "render");
         inDOM("#copyData").style.visibility = "visible";
       }
 
