--- a/src/index.html
+++ b/src/index.html
@@ -224,11 +224,11 @@
 
       // TODO: add app-version vector to the config to verify needing to invalidate local cache of data/credentials
 
+      // NOTE: reset updated_at to 2 hours in the past using browser console directly
+      // (function () {const temp = JSON.parse(localStorage.getItem("cache"));temp.updated_at -= 1000*60*60*2;localStorage.setItem("cache", JSON.stringify(temp))})()
+
       function render() {
         const { data } = cacheManager.read();
-        const { encryptionKey, org, token, ...reposConfig } = configManager.read();
-
-        displayOverview(org, reposConfig);
 
         addRatioCards(data);
         inDOM(`#ratios`).style.visibility = "visible";
@@ -240,15 +240,25 @@
       }
 
       addEventListener("DOMContentLoaded", function appInit() {
-        cacheManager.sub(configManager.events.VALID, "onValidConfig");
-        prManager.sub(configManager.events.VALID, "onInit");
+        configManager.sub(configManager.events.VALID, () => {
+          // FIXME|TODO: reformat localStorage data to not require special destructuring; e.g. `...reposConfig`
+          const { encryptionKey, org, token, ...reposConfig } = configManager.read();
+
+          displayOverview(org, reposConfig);
+        });
 
         cacheManager.sub(cacheManager.events.UPDATED, render);
-        statusDialog.sub(prManager.events.REQUEST, "handleEvents");
-        statusDialog.sub(encryptedCopy.events.ENCRYPT, "handleEvents");
+        cacheManager.sub(configManager.events.VALID, "onValidConfig");
+        cacheManager.sub(prManager.events.UPDATED, "onUpdated");
         Object.values(cacheManager.events).forEach((event) => statusDialog.sub(event, "handleEvents"));
 
-        configManager.init();
+        prManager.sub(configManager.events.VALID, "onInit");
+        prManager.sub(cacheManager.events.EXPIRED, "onExpired");
+
+        statusDialog.sub(prManager.events.REQUEST, "handleEvents");
+        statusDialog.sub(encryptedCopy.events.ENCRYPT, "handleEvents");
+
+        configManager.init(); // this needs to be last to kick everything off
       });
     </script>
   </body>
