add deployment frequency graph based on merges

--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,16 @@
         <article id="ratios--cards"></article>
       </details>
 
+      <details id="deploys">
+        <summary><h2>Deployments</h2></summary>
+
+        <article>
+          <p>Assuming that deploys happen for each merge here are the deployments for the past 6 months.</p>
+
+          <div id="deploys--graph" style="height: 800px; margin: 0 auto; width: 1400px"></div>
+        </article>
+      </details>
+
       <details id="openTimes">
         <summary><h2>Open Time</h2></summary>
 
