add more testing

--- a/src/index.html
+++ b/src/index.html
@@ -85,14 +85,7 @@
         <label for="token">GitHub Personal Access Token (PAT)</label>
 
         <div style="display: flex">
-          <input
-            id="token"
-            name="token"
-            onfocus="this.blur();"
-            style="flex-grow: 1"
-            title="This field is not editable"
-            type="password"
-          />
+          <input id="token" name="token" style="flex-grow: 1" type="password" />
           <button data-type="test">Test token</button>
         </div>
 
